--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "start": "bun src/index.ts",
     "dev": "bun --watch --no-clear-screen --verbose src/index.ts"
   },
   "devDependencies": {
