--- a/services/inventory-service/package.json
+++ b/services/inventory-service/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@swap/shared": "workspace:*",
     "amqplib": "^0.10.9",
     "fastify": "^5.7.2"
   }
