--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@swap/shared": "workspace:*",
     "amqplib": "^0.10.9",
     "fastify": "^5.7.2"
   }
