--- a/services/payment-service/tsconfig.json
+++ b/services/payment-service/tsconfig.json
@@ -14,6 +14,13 @@
     "verbatimModuleSyntax": true,
     "noEmit": true,
 
+    // Path mappings for workspace packages
+    "baseUrl": ".",
+    "paths": {
+      "@swap/shared": ["../../shared/src/index.ts"],
+      "@swap/shared/*": ["../../shared/src/*"]
+    },
+
     // Best practices
     "strict": true,
     "skipLibCheck": true,
