--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "services/*"
   ],
   "scripts": {
+    "start-all": "bun run dev:order & bun run dev:inventory & bun run dev:payment",
     "test": "bun test services/order-service/tests",
+    "start:order": "cd services/order-service && bun run start",
+    "start:inventory": "cd services/inventory-service && bun run start",
+    "start:payment": "cd services/payment-service && bun run start",
     "dev:order": "cd services/order-service && bun run dev",
     "dev:inventory": "cd services/inventory-service && bun run dev",
     "dev:payment": "cd services/payment-service && bun run dev"
