--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,6 @@ jobs:
       - name: Start services with Docker Compose
         run: docker compose up -d
 
-      - name: Wait for RabbitMQ to be ready
-        run: |
-          timeout 60 bash -c 'until docker exec rabbitmq rabbitmq-diagnostics check_running; do sleep 2; done'
-
       - name: Start Order Service
         run: |
           cd services/order-service
@@ -48,7 +44,17 @@ jobs:
           RABBITMQ_URL: amqp://admin:admin@localhost:5672
 
       - name: Wait for services to be ready
-        run: sleep 5
+        run: |
+          timeout 60 bash -c '
+            echo "Waiting for services to be ready..."
+            until \
+              curl -sSf http://localhost:3001/ >/dev/null 2>&1 && \
+              curl -sSf http://localhost:3002/ >/dev/null 2>&1 && \
+              curl -sSf http://localhost:3003/ >/dev/null 2>&1; do
+              echo "Services not ready yet, retrying in 2 seconds..."
+              sleep 2
+            done
+          '
 
       - name: Run tests
         run: bun run test
