--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,15 @@ jobs:
 
       - name: Wait for RabbitMQ to be ready
         run: |
-          timeout 60 bash -c 'until docker exec rabbitmq rabbitmq-diagnostics check_running; do 
-            echo "Waiting for RabbitMQ..."
+          echo "Waiting for RabbitMQ container to start..."
+          timeout 30 bash -c 'until docker ps | grep -q rabbitmq; do 
+            echo "Container not running yet..."
+            sleep 2
+          done'
+
+          echo "Waiting for RabbitMQ to be ready..."
+          timeout 60 bash -c 'until docker exec rabbitmq rabbitmq-diagnostics ping 2>/dev/null; do 
+            echo "RabbitMQ not ready yet..."
             sleep 2
           done'
           echo "✓ RabbitMQ is ready"
@@ -70,14 +77,11 @@ jobs:
       - name: Show service logs on failure
         if: failure()
         run: |
-          echo "=== Order Service Logs ==="
-          cat /tmp/order.log 2>/dev/null || echo "No logs found"
-          echo ""
-          echo "=== Inventory Service Logs ==="
-          cat /tmp/inventory.log 2>/dev/null || echo "No logs found"
-          echo ""
-          echo "=== Payment Service Logs ==="
-          cat /tmp/payment.log 2>/dev/null || echo "No logs found"
+          echo "=== Services Logs ==="
+          cat /tmp/services.log 2>/dev/null || echo "No logs found"
           echo ""
           echo "=== RabbitMQ Logs ==="
           docker compose logs rabbitmq
+          echo ""
+          echo "=== Docker Containers ==="
+          docker ps -a
