--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,10 @@ services:
   rabbitmq:
     image: rabbitmq:4.2.3-management
     container_name: rabbitmq
+    user: "rabbitmq"
     ports:
       - "5672:5672"
       - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: admin
       RABBITMQ_DEFAULT_PASS: admin
-      RABBITMQ_ERLANG_COOKIE: "rabbitmq-cookie-for-ci"
-    tmpfs:
-      - /var/lib/rabbitmq
