--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "bun src/index.ts",
     "dev": "bun --watch --no-clear-screen --verbose src/index.ts",
+    "typecheck": "tsc --noEmit",
     "test": "bun test",
     "test:watch": "bun test --watch"
   },
