--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:order": "cd services/order-service && bun run start",
     "start:inventory": "cd services/inventory-service && bun run start",
     "start:payment": "cd services/payment-service && bun run start",
+    "dev:all": "bun run dev:order & bun run dev:inventory & bun run dev:payment",
     "dev:order": "cd services/order-service && bun run dev",
     "dev:inventory": "cd services/inventory-service && bun run dev",
     "dev:payment": "cd services/payment-service && bun run dev"
