--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typecheck:order": "cd services/order-service && bun run typecheck",
     "typecheck:inventory": "cd services/inventory-service && bun run typecheck",
     "typecheck:payment": "cd services/payment-service && bun run typecheck",
-    "start-all": "bun run start:order & bun run start:inventory & bun run start:payment",
+    "start:all": "bun run start:order & bun run start:inventory & bun run start:payment",
     "test": "bun test services/order-service/tests",
     "start:order": "cd services/order-service && bun run start",
     "start:inventory": "cd services/inventory-service && bun run start",
