--- a/services/payment-service/package.json
+++ b/services/payment-service/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.16.0"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -18,6 +19,7 @@
   "dependencies": {
     "@swap/shared": "workspace:*",
     "amqplib": "^0.10.9",
-    "fastify": "^5.7.2"
+    "fastify": "^5.7.2",
+    "pg": "^8.18.0"
   }
 }
