--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "@swap/shared": "workspace:*",
     "amqplib": "^0.10.9",
     "fastify": "^5.7.2",
