--- a/shared/package.json
+++ b/shared/package.json
@@ -7,12 +7,17 @@
   "exports": {
     ".": "./src/index.ts",
     "./constants": "./src/constants.ts",
-    "./types": "./src/types.ts"
+    "./types": "./src/types.ts",
+    "./rabbitmq": "./src/rabbitmq.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "amqplib": "^0.10.3"
+  },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "typescript": "^5.0.0"
   }
 }
