--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,24 @@ services:
     ports:
       - "3003:3003"
 
+  frontend:
+    build:
+      context: .
+      dockerfile: ./frontend/Dockerfile
+      args:
+        - VITE_ORDER_SERVICE_URL=http://localhost:3001
+        - VITE_INVENTORY_SERVICE_URL=http://localhost:3002
+        - VITE_PAYMENT_SERVICE_URL=http://localhost:3003
+    depends_on:
+      order-service:
+        condition: service_started
+      inventory-service:
+        condition: service_started
+      payment-service:
+        condition: service_started
+    ports:
+      - "4000:4000"
+
 volumes:
   rabbitmq-data:
   order-db-data:
