--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     container_name: rabbitmq
     user: "rabbitmq"
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "${RABBITMQ_PORT:-5672}:5672"
+      - "${RABBITMQ_MANAGEMENT_PORT:-15672}:15672"
     environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: admin
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
     healthcheck:
@@ -20,33 +20,30 @@ services:
 
   order-db:
     image: postgres:18
-    environment:
-      POSTGRES_DB: orders
-      POSTGRES_PASSWORD: dev
+    env_file:
+      - ./services/order-service/.env
     volumes:
       - order-db-data:/var/lib/postgresql
     ports:
-      - "5433:5432"
+      - "${ORDER_DB_PORT:-5433}:5432"
 
   inventory-db:
     image: postgres:18
-    environment:
-      POSTGRES_DB: inventory
-      POSTGRES_PASSWORD: dev
+    env_file:
+      - ./services/inventory-service/.env
     volumes:
       - inventory-db-data:/var/lib/postgresql
     ports:
-      - "5434:5432"
+      - "${INVENTORY_DB_PORT:-5434}:5432"
 
   payment-db:
     image: postgres:18
-    environment:
-      POSTGRES_DB: payments
-      POSTGRES_PASSWORD: dev
+    env_file:
+      - ./services/payment-service/.env
     volumes:
       - payment-db-data:/var/lib/postgresql
     ports:
-      - "5435:5432"
+      - "${PAYMENT_DB_PORT:-5435}:5432"
 
   order-service:
     build:
@@ -57,9 +54,8 @@ services:
         condition: service_healthy
       order-db:
         condition: service_started
-    environment:
-      DATABASE_URL: postgres://postgres:dev@order-db:5432/orders
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
+    env_file:
+      - ./services/order-service/.env
     ports:
       - "3001:3001"
 
@@ -72,9 +68,8 @@ services:
         condition: service_healthy
       inventory-db:
         condition: service_started
-    environment:
-      DATABASE_URL: postgres://postgres:dev@inventory-db:5432/inventory
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
+    env_file:
+      - ./services/inventory-service/.env
     ports:
       - "3002:3002"
 
@@ -87,9 +82,8 @@ services:
         condition: service_healthy
       payment-db:
         condition: service_started
-    environment:
-      DATABASE_URL: postgres://postgres:dev@payment-db:5432/payments
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
+    env_file:
+      - ./services/payment-service/.env
     ports:
       - "3003:3003"
 
@@ -101,6 +95,8 @@ services:
         - VITE_ORDER_SERVICE_URL=http://localhost:3001
         - VITE_INVENTORY_SERVICE_URL=http://localhost:3002
         - VITE_PAYMENT_SERVICE_URL=http://localhost:3003
+    env_file:
+      - ./frontend/.env
     depends_on:
       order-service:
         condition: service_started
