--- a/docker-compose.cicd.yml
+++ b/docker-compose.cicd.yml
@@ -3,12 +3,14 @@ services:
     image: rabbitmq:4.2.3-management
     container_name: rabbitmq
     user: "rabbitmq"
+    env_file:
+      - .env.example
     ports:
       - "${RABBITMQ_PORT:-5672}:5672"
       - "${RABBITMQ_MANAGEMENT_PORT:-15672}:15672"
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-admin}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-admin}
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
     healthcheck:
