--- a/services/inventory-service/package.json
+++ b/services/inventory-service/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "bun src/index.ts",
     "dev": "bun --watch --no-clear-screen --verbose src/index.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "bun test",
+    "test:watch": "bun test --watch"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
