--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "gce"
     networking.gke.io/managed-certificates: "swap-certificate"
     kubernetes.io/ingress.global-static-ip-name: "swap-static-ip"
+    kubernetes.io/ingress.allow-http: "false"
 spec:
   ingressClassName: gce
   rules:
